--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <import type="com.leebeebeom.closetnote.util.constant.ViewType" />
+
         <variable
             name="model"
             type="com.leebeebeom.closetnote.ui.main.list.ListViewModel" />
@@ -42,14 +46,39 @@
                 app:model="@{model}" />
 
             <include
-                android:id="@+id/rvSize"
+                android:id="@+id/rvSizeList"
                 layout="@layout/fragment_list_recycler_view_size_list"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rvFolder"
-                app:model="@{model}" />
+                android:visibility="@{model.viewType == ViewType.values()[0] ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <include
+                android:id="@+id/rvSizeGrid"
+                layout="@layout/fragment_list_recycler_view_size_grid"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:visibility="@{model.viewType == ViewType.values()[1] ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rvFolder" />
+
+            <include
+                android:id="@+id/noData"
+                layout="@layout/fragment_list_no_data"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:visibility="@{model.sizeTuplesLive.empty ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rvFolder" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.leebeebeom.closetnote.ui.view.LockableScrollView>
 </layout>
