--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,64 +10,46 @@
             type="com.leebeebeom.closetnote.util.adapter.BaseViewPagerAdapter.MainViewPagerAdapter" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <com.leebeebeom.closetnote.ui.view.LockableScrollView
+        android:id="@+id/sv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".ui.main.main.MainFragment">
 
-        <com.leebeebeom.closetnote.ui.view.LockableScrollView
-            android:id="@+id/sv"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvCategory"
+                style="@style/myFragmentMainTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/all_caps_category"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    style="@style/myFragmentMainTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/all_caps_category" />
+            <com.leebeebeom.closetnote.ui.view.main.MainToggleGroup
+                android:id="@+id/toggleGroup"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingHorizontal="@dimen/_16sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvCategory"
+                app:selectionRequired="true"
+                app:singleSelection="true" />
 
-                <com.google.android.material.button.MaterialButtonToggleGroup
-                    android:id="@+id/toggleGroup"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    app:selectionRequired="true"
-                    app:singleSelection="true">
-
-                    <include
-                        android:id="@+id/btnTop"
-                        layout="@layout/fragment_main_button"
-                        app:text="@{@string/all_caps_top}" />
-
-                    <include
-                        android:id="@+id/btnBottom"
-                        layout="@layout/fragment_main_button"
-                        app:text="@{@string/all_caps_bottom}" />
-
-                    <include
-                        android:id="@+id/btnOuter"
-                        layout="@layout/fragment_main_button"
-                        app:text="@{@string/all_caps_outer}" />
-
-                    <include
-                        android:id="@+id/btnEtc"
-                        layout="@layout/fragment_main_button"
-                        app:text="@{@string/all_caps_etc}" />
-                </com.google.android.material.button.MaterialButtonToggleGroup>
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/vp"
-                    app:adapter="@{mainViewPagerAdapter}"
-                    app:offscreenPageLimit="@{1}"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:adapter="@{mainViewPagerAdapter}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/toggleGroup"
+                app:offscreenPageLimit="@{1}" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
         </com.leebeebeom.closetnote.ui.view.LockableScrollView>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
