--- a/app/src/main/res/layout/fragment_main_button.xml
+++ b/app/src/main/res/layout/fragment_main_button.xml
@@ -3,20 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="text"
-            type="String" />
-    </data>
-
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button"
-        style="?materialButtonOutlinedStyle"
-        android:layout_width="@dimen/_72sdp"
-        android:layout_height="@dimen/_36sdp"
-        android:text="@{text}"
+        android:id="@+id/btn"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_34sdp"
         android:textSize="@dimen/_9sdp"
         app:rippleColor="@android:color/transparent"
-        tools:text="TOP" />
+        android:layout_weight="1"
+        android:fontFamily="@font/noto_medium"
+        android:textStyle="bold"
+        tools:ignore="ObsoleteLayoutParam" />
 </layout>
