--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,7 @@
             app:backgroundTint="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:tint="@color/black"
             app:layout_anchor="@id/bottomAppBar"
             app:fabSize="mini"
             app:fabCustomSize="@dimen/_24sdp"
