텍스트 사이즈 수정, 레이아웃 패딩 추가

--- a/app/src/main/res/layout/fragment_setting_include_sign_out.xml
+++ b/app/src/main/res/layout/fragment_setting_include_sign_out.xml
@@ -18,6 +18,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:paddingHorizontal="@dimen/_8sdp"
         android:layout_height="wrap_content">
 
         <com.google.android.material.button.MaterialButton
@@ -25,11 +26,9 @@
             style="@style/myOutlineButton"
             android:layout_width="0dp"
             android:layout_height="?mySignButtonHeight"
-            android:layout_marginHorizontal="@dimen/_8sdp"
             android:onClick="@{() -> model.emailLive.equals(@string/setting_anonymously) ? fragment.navigateAnonymouslySignOutDialog() : fragment.signOut()}"
             android:text="@string/setting_sign_out"
             android:textColor="?colorError"
-            android:textSize="@dimen/_12sdp"
             app:backgroundTint="?colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,11 +39,9 @@
             style="@style/myOutlineButton"
             android:layout_width="0dp"
             android:layout_height="?mySignButtonHeight"
-            android:layout_marginHorizontal="@dimen/_8sdp"
             android:onClick="@{() -> fragment.navigateAnonymouslySignUpFragment()}"
             android:text="@string/setting_switch_to_member"
             android:textColor="?myColorControl"
-            android:textSize="@dimen/_12sdp"
             android:visibility="@{model.emailLive.equals(@string/setting_anonymously) ? View.VISIBLE : View.GONE}"
             app:backgroundTint="?colorPrimary"
             app:layout_constraintBottom_toTopOf="@id/btnSignOut"
