--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -59,7 +59,7 @@
                 <com.leebeebeom.closetnote.ui.view.CustomEditText
                     android:id="@+id/etEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_40sdp"
+                    android:layout_height="?myEditTextHeight"
                     android:inputType="textEmailAddress"
                     android:text="@={model.emailLive}" />
             </com.google.android.material.textfield.TextInputLayout>
