--- a/app/src/main/res/layout/fragment_sign_in_include_edit_text.xml
+++ b/app/src/main/res/layout/fragment_sign_in_include_edit_text.xml
@@ -31,7 +31,7 @@
             <com.leebeebeom.closetnote.ui.view.CustomEditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_44sdp"
+                android:layout_height="?myEditTextHeight"
                 android:inputType="textEmailAddress"
                 android:text="@={emailLive}" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -51,7 +51,7 @@
             <com.leebeebeom.closetnote.ui.view.CustomEditText
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_44sdp"
+                android:layout_height="?myEditTextHeight"
                 android:inputType="textPassword"
                 android:text="@={passwordLive}" />
         </com.google.android.material.textfield.TextInputLayout>
