--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -49,7 +49,7 @@
                     <com.leebeebeom.closetnote.ui.view.CustomEditText
                         android:id="@+id/etUsername"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_44sdp"
+                        android:layout_height="?myEditTextHeight"
                         android:inputType="text"
                         android:text="@={model.usernameLive}" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -80,7 +80,7 @@
                     <com.leebeebeom.closetnote.ui.view.CustomEditText
                         android:id="@+id/etConfirmPassword"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_44sdp"
+                        android:layout_height="?myEditTextHeight"
                         android:inputType="textPassword"
                         android:text="@={model.confirmPasswordLive}" />
                 </com.google.android.material.textfield.TextInputLayout>
