--- a/app/src/main/res/layout/fragment_size_include_bottom.xml
+++ b/app/src/main/res/layout/fragment_size_include_bottom.xml
@@ -3,77 +3,86 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="model"
             type="com.leebeebeom.closetnote.ui.main.size.SizeViewModel" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <include
+            android:id="@+id/length"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_1sdp"
+            app:hint="@{@string/size_length}"
+            app:layout_constraintEnd_toStartOf="@id/view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:text="@{model.sizeLive.firstInfo}" />
 
-            <include
-                android:id="@+id/length"
-                layout="@layout/fragment_size_edit_text"
-                app:hint="@{@string/size_length}"
-                app:text="@{model.sizeLive.firstInfo}" />
+        <View
+            android:id="@+id/view"
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/length"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1px"
-                android:layout_weight="1"
-                android:background="@android:color/transparent" />
+        <include
+            android:id="@+id/waist"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_1sdp"
+            app:hint="@{@string/size_waist}"
+            app:layout_constraintEnd_toStartOf="@id/thigh"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/length"
+            app:text="@{model.sizeLive.secondInfo}" />
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        <include
+            android:id="@+id/thigh"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_1sdp"
+            app:hint="@{@string/size_thigh}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/waist"
+            app:layout_constraintTop_toBottomOf="@id/length"
+            app:text="@{model.sizeLive.thirdInfo}" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <include
-                android:id="@+id/waist"
-                layout="@layout/fragment_size_edit_text"
-                app:hint="@{@string/size_waist}"
-                app:text="@{model.sizeLive.secondInfo}" />
+        <include
+            android:id="@+id/rise"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_1sdp"
+            app:hint="@{@string/size_rise}"
+            app:layout_constraintEnd_toStartOf="@id/hem"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/waist"
+            app:text="@{model.sizeLive.fourthInfo}" />
 
-            <include
-                android:id="@+id/thigh"
-                layout="@layout/fragment_size_edit_text"
-                android:layout_width="0dp"
-                android:layout_marginEnd="0dp"
-                android:layout_weight="1"
-                app:hint="@{@string/size_thigh}"
-                android:layout_height="wrap_content"
-                app:text="@{model.sizeLive.thirdInfo}" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <include
-                android:id="@+id/rise"
-                layout="@layout/fragment_size_edit_text"
-                app:hint="@{@string/size_rise}"
-                app:text="@{model.sizeLive.fourthInfo}" />
-
-            <include
-                android:id="@+id/hem"
-                layout="@layout/fragment_size_edit_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_weight="1"
-                app:hint="@{@string/size_hem}"
-                app:text="@{model.sizeLive.fifthInfo}" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        <include
+            android:id="@+id/hem"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_1sdp"
+            app:hint="@{@string/size_hem}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/rise"
+            app:layout_constraintTop_toBottomOf="@id/thigh"
+            app:text="@{model.sizeLive.fifthInfo}" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
