--- a/app/src/main/res/layout/fragment_size_include_etc.xml
+++ b/app/src/main/res/layout/fragment_size_include_etc.xml
@@ -9,76 +9,81 @@
             type="com.leebeebeom.closetnote.ui.main.size.SizeViewModel" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <include
+            android:id="@+id/option1"
+            layout="@layout/fragment_size_edit_text_no_suffix"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_1sdp"
+            app:hint="@{@string/size_option_1}"
+            app:layout_constraintEnd_toStartOf="@id/option2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:text="@{model.sizeLive.firstInfo}" />
 
-            <include
-                android:id="@+id/option1"
-                layout="@layout/fragment_size_edit_text_no_suffix"
-                app:hint="@{@string/size_option_1}"
-                app:text="@{model.sizeLive.firstInfo}" />
+        <include
+            android:id="@+id/option2"
+            layout="@layout/fragment_size_edit_text_no_suffix"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_1sdp"
+            app:hint="@{@string/size_option_2}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/option1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:text="@{model.sizeLive.secondInfo}" />
 
-            <include
-                android:id="@+id/option2"
-                layout="@layout/fragment_size_edit_text_no_suffix"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_weight="1"
-                app:hint="@{@string/size_option_2}"
-                app:text="@{model.sizeLive.secondInfo}" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        <include
+            android:id="@+id/option3"
+            layout="@layout/fragment_size_edit_text_no_suffix"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_1sdp"
+            app:hint="@{@string/size_option_3}"
+            app:layout_constraintEnd_toStartOf="@id/option4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/option1"
+            app:text="@{model.sizeLive.thirdInfo}" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <include
+            android:id="@+id/option4"
+            layout="@layout/fragment_size_edit_text_no_suffix"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_1sdp"
+            app:hint="@{@string/size_option_4}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/option3"
+            app:layout_constraintTop_toBottomOf="@id/option2"
+            app:text="@{model.sizeLive.fourthInfo}" />
 
-            <include
-                android:id="@+id/option3"
-                layout="@layout/fragment_size_edit_text_no_suffix"
-                app:hint="@{@string/size_option_3}"
-                app:text="@{model.sizeLive.thirdInfo}" />
+        <include
+            android:id="@+id/option5"
+            layout="@layout/fragment_size_edit_text_no_suffix"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_1sdp"
+            app:hint="@{@string/size_option_5}"
+            app:layout_constraintEnd_toStartOf="@id/option6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/option3"
+            app:text="@{model.sizeLive.fifthInfo}" />
 
-            <include
-                android:id="@+id/option4"
-                layout="@layout/fragment_size_edit_text_no_suffix"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_weight="1"
-                app:hint="@{@string/size_option_4}"
-                app:text="@{model.sizeLive.fourthInfo}" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <include
-                android:id="@+id/option5"
-                layout="@layout/fragment_size_edit_text_no_suffix"
-                app:hint="@{@string/size_option_5}"
-                app:text="@{model.sizeLive.fifthInfo}" />
-
-            <include
-                android:id="@+id/option6"
-                layout="@layout/fragment_size_edit_text_no_suffix"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_weight="1"
-                app:hint="@{@string/size_option_6}"
-                app:text="@{model.sizeLive.sixthInfo}" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        <include
+            android:id="@+id/option6"
+            layout="@layout/fragment_size_edit_text_no_suffix"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_1sdp"
+            app:hint="@{@string/size_option_6}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/option5"
+            app:layout_constraintTop_toBottomOf="@id/option4"
+            app:text="@{model.sizeLive.sixthInfo}" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
