--- a/app/src/main/res/layout/fragment_size_include_top.xml
+++ b/app/src/main/res/layout/fragment_size_include_top.xml
@@ -3,59 +3,67 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="model"
             type="com.leebeebeom.closetnote.ui.main.size.SizeViewModel" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <include
+            android:id="@+id/length"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_1sdp"
+            app:hint="@{@string/size_length}"
+            app:layout_constraintEnd_toStartOf="@id/shoulder"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:text="@{model.sizeLive.firstInfo}" />
 
-            <include
-                android:id="@+id/length"
-                layout="@layout/fragment_size_edit_text"
-                app:hint="@{@string/size_length}"
-                app:text="@{model.sizeLive.firstInfo}" />
+        <include
+            android:id="@+id/shoulder"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_1sdp"
+            android:layout_marginEnd="0dp"
+            app:hint="@{@string/size_shoulder}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/length"
+            app:layout_constraintTop_toTopOf="parent"
+            app:text="@{model.sizeLive.secondInfo}" />
 
-            <include
-                android:id="@+id/shoulder"
-                layout="@layout/fragment_size_edit_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_weight="1"
-                app:hint="@{@string/size_shoulder}"
-                app:text="@{model.sizeLive.secondInfo}" />
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        <include
+            android:id="@+id/chest"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_1sdp"
+            app:hint="@{@string/size_chest}"
+            app:layout_constraintEnd_toStartOf="@id/sleeve"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/length"
+            app:text="@{model.sizeLive.thirdInfo}" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <include
-                android:id="@+id/chest"
-                layout="@layout/fragment_size_edit_text"
-                app:hint="@{@string/size_chest}"
-                app:text="@{model.sizeLive.thirdInfo}" />
-
-            <include
-                android:id="@+id/sleeve"
-                layout="@layout/fragment_size_edit_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_weight="1"
-                app:hint="@{@string/size_sleeve}"
-                app:text="@{model.sizeLive.fourthInfo}" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        <include
+            android:id="@+id/sleeve"
+            layout="@layout/fragment_size_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_1sdp"
+            android:layout_marginEnd="0dp"
+            android:layout_weight="1"
+            app:hint="@{@string/size_sleeve}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/chest"
+            app:layout_constraintTop_toBottomOf="@id/shoulder"
+            app:text="@{model.sizeLive.fourthInfo}" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
